--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -766,6 +766,19 @@ header .login { height: 36px; cursor: pointer; }
 
 .video-container iframe { width: 100%; height: 100%; border: none; }
 
+/* ========================
+    Video About Team
+========================= */
+.intro-video-about-team { padding: 80px 10%; text-align: center; }
+
+.intro-video-about-team h2 {
+    font-size: 2.2rem;
+    font-weight: 800;
+    color: #6C63FF;
+    margin-bottom: 30px;
+}
+
+
 /* =========================
    Contacto
 ========================= */
